--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -13,8 +13,9 @@
 
 	<!-- build:css {{assetPath}}/css/vendor.css -->
 	<!-- bower:css -->
-	<link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
 	<link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
+	<link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
+	<link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
 	<!-- endbower -->
   <!-- endbuild -->
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
@@ -22,6 +23,7 @@
 	<!-- build:css {{assetPath}}/css/app.css -->
 	<link rel="stylesheet" href="{{assetPath}}/css/app.css">
 	<!-- endbuild -->
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.0/bootstrap-table.min.css" rel="stylesheet"/> -->
 
 </head>
 
@@ -57,22 +59,23 @@
 
 <!-- build:js {{assetPath}}/js/vendor.js -->
 <!-- bower:js -->
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/jquery-ui/jquery-ui.js"></script>
 <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
+<script src="/bower_components/jquery-ui/jquery-ui.js"></script>
 <script src="/bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="/bower_components/imagesloaded/imagesloaded.js"></script>
 <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 <script src="/bower_components/slick-carousel/slick/slick.js"></script>
-<script src="/bower_components/typeahead.js/dist/typeahead.bundle.min.js"></script>
-<script src="/bower_components/typeahead.js/dist/bloodhound.min.js"></script>
+<script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script src="{{assetPath}}/js/app.js"></script>
 
-<script src="{{assetPath}}/js/lib/bootstrap-tagsinput.js"></script>
+<script src="{{assetPath}}/js/lib/bootstrap-tagsinput.js"></script>  
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script> -->
 
 
 </body>
