--- a/app/assets/css/pages/_global.scss
+++ b/app/assets/css/pages/_global.scss
@@ -183,6 +183,9 @@ th,td {
 .hide {
 	display: none;
 }
+.show {
+	display: block;
+}
 
 
 
@@ -236,7 +239,7 @@ hr {
 	color: #fff;
 	font-size: $size-tooltip;
 	width: 15px;
-  line-height: 15px;
+	line-height: 15px;
 	height: 15px;
 	border-radius: 50%;
 	display: inline-block;
@@ -353,3 +356,32 @@ section {
 	font-size: $size-xxl;
 	text-transform: capitalize;
 }
+
+.col-xs-15,
+.col-sm-15,
+.col-md-15,
+.col-lg-15 {
+	position: relative;
+	min-height: 1px;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+
+.col-xs-15 {
+	width: 20%;
+	float: left;
+}
+@media (min-width: 768px) {
+	.col-sm-15 {
+		width: 20%;
+		float: left;
+	}
+}
+@media (min-width: 1024) {
+	.col-md-15 {
+		width: 20%;
+		float: left;
+	}
+}
+
