--- a/app/search.twig
+++ b/app/search.twig
@@ -56,7 +56,7 @@
 
 </section>
 
-<section class="search-content" data-module="SearchControl">
+<section class="search-content " data-module="SearchControl">
 	
 	<div class="filter-wrapper collapse" id="collapseFilter">
 		<div class="container">
@@ -255,7 +255,7 @@
 	</div>
 
 	<div class="search-detail">
-		<div class="tab-content " id="search-grid">
+		<div class="tab-content active" id="search-grid">
 			<div class="row">
 
 				<div class="thumb-item col-md-15">
@@ -694,7 +694,7 @@
 
 				<div class="thumb-item col-md-15">
 					<div class="thumb-gallery">
-						<ul class="thumb-list slider-wrapper">
+						<ul class="thumb-list">
 							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
 						</ul>
 						<span class="love"><i class="fa fa-heart-o"></i></span>
@@ -707,7 +707,7 @@
 
 			</div>
 		</div>
-		<div class=" tab-content active " id="search-mapview">
+		<div class=" tab-content" id="search-mapview">
 			<div class="row">
 
 				<div class="thumb-item col-md-6">
