update map layout

--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -15,11 +15,10 @@
 	<!-- bower:css -->
 	<link rel="stylesheet" href="/bower_components/magnific-popup/dist/magnific-popup.css" />
 	<link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
-
-  <script src="/bower_components/bootstrap/dist/css/bootstrap.min.css"></script>
 	<link rel="stylesheet" href="/bower_components/bootstrap-table/src/bootstrap-table.css" />
 	<!-- endbower -->
   <!-- endbuild -->
+  <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
 	<!-- build:css {{assetPath}}/css/app.css -->
 	<link rel="stylesheet" href="{{assetPath}}/css/app.css">
@@ -69,12 +68,13 @@
 <script src="/bower_components/typeahead.js/dist/typeahead.bundle.js"></script>
 <script src="/bower_components/slick-carousel/slick/slick.js"></script>
 <script src="/bower_components/bootstrap-table/src/bootstrap-table.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 <script src="{{assetPath}}/js/app.js"></script>
 
+<script src="{{assetPath}}/js/lib/bootstrap-tagsinput.js"></script>  
 <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.11.1/bootstrap-table.min.js"></script> -->
 
 
