--- a/app/index.twig
+++ b/app/index.twig
@@ -19,7 +19,7 @@
 				<div class="col-md-8">
 					<div class="form-group search-map inputtags">
 						<div id="input-banner">
-							<input type="text" value="District 1" data-role="tagsinput" placeholder="Searcb by Locality or Project Name" />
+							<input type="text" value="" data-role="tagsinput" placeholder="Searcb by Locality or Project Name" />
 						</div>
 					</div>
 				</div>
