--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -3,9 +3,12 @@
     <img src="./assets/images/global/logo.png" alt="" class="hide-for-small"> 
     <img src="./assets/images/global/logo.png" alt="" class="show-for-small">
   </a>
-  <form id="searchHeader" class="wrapper-inputtags">
-    <input type="text" value="ThaoDien" id="search-header" data-role="tagsinput" />
-    <button class="btn-close"><i class="fa fa-close"></i></button>
+  <form id="searchHeader" class="wrapper-inputtags collapse">
+    <div class="form-wrapper">
+      <input type="text" value="" id="search-header" data-role="tagsinput" />
+      <a class="btn-close" href="javascript:void(0);"><i class="fa fa-close"></i></a>
+      <a href="#0" class="btn-submit"><i class="fa fa-search"></i></a>
+    </div>
   </form>
   <nav>
     <a href="javascript:void(0);" class="btn-burger">
@@ -13,7 +16,7 @@
     </a>
     <ul class="nav__menu clearfix">
       <li class="active">
-        <a href="javascript:void"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
+        <a href="#searchHeader" data-toggle="collapse"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
       </li>
       <li>
         <a href="javascript:void(0);"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
