--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -121,8 +121,18 @@
 }
 
 .filter-wrapper {
+  position: relative;
   .link {
     margin-left: 10px;
+  }
+}
+
+.close-filter {
+  @include absolute(top 10px right 20px);
+  color: $gray-medium;
+  font-size: 26px;
+  &:hover {
+    color: #999;
   }
 }
 
