--- a/app/search.twig
+++ b/app/search.twig
@@ -59,6 +59,7 @@
 <section class="search-content " data-module="SearchControl">
 	
 	<div class="filter-wrapper collapse" id="collapseFilter">
+		<a href="#collapseFilter" data-toggle="collapse" class="close-filter"><i class="fa fa-close"></i></a>
 		<div class="container">
 			<h3 class="block-title">Required Amenities</h3>
 			<div class="row">
@@ -217,7 +218,7 @@
 
 			<div class="btn-wrapper text-left">
 				<a href="#" class="btn btn--blue"> Apply</a>
-				<a href="#" class="link"> Clear Filters</a>
+				<a href="#" class="link clear-filter"> Clear Filters</a>
 			</div>
 		</div>
 	</div>
