--- a/app/listing.twig
+++ b/app/listing.twig
@@ -10,6 +10,7 @@
   <div class="modal fade" id="galleryDetail">
     <div class="modal-dialog">
       <div class="modal-content">
+        <a href="#galleryDetail" data-toggle="modal" class="close-modal"><i class="fa fa-close"></i></a>
         <div class="modal-body row">
           <div class="col-md-8 gallery__slide" data-module="GallerySlide">
             <ul class="slider gallery__for">
@@ -92,13 +93,13 @@
 
           <h3 class="block-title"> Description</h3>
 
-          <div class="row icon-service">
-            <div class="col-md-3"><i class="fa fa-building-o"></i> Apartment</div>  
-            <div class="col-md-3"><i class="fa fa-bath"></i> 1 Bathroom(s)</div>  
-            <div class="col-md-3"><i class="fa fa-bed"></i> 1 Bedroom(s)</div>  
-            <div class="col-md-3"><i class="fa fa-group"></i> 1 Bedroom(s)</div>  
-            <div class="col-md-3"><i class="fa fa-umbrella"></i> 1 Fullu Funished(s)</div>  
-          </div>
+          <ul class="thumb-service thumb--col-4">
+            <li><i class="fa fa-building-o"></i> Apartment</li>  
+            <li><i class="fa fa-bath"></i> 1 Bathroom(s)</li>  
+            <li><i class="fa fa-bed"></i> 1 Bedroom(s)</li>  
+            <li><i class="fa fa-group"></i> 1 Bedroom(s)</li>  
+            <li><i class="fa fa-umbrella"></i> 1 Fullu Funished(s)</li>  
+          </ul>
 
           <h3 class="block-title" id="desciption">Description</h3>
 
