--- a/app/_templates/header.twig
+++ b/app/_templates/header.twig
@@ -6,7 +6,7 @@
   <form id="searchHeader" class="wrapper-inputtags collapse">
     <div class="form-wrapper">
       <input type="text" value="" id="search-header" data-role="tagsinput" />
-      <a class="btn-close" href="javascript:void(0);"><i class="fa fa-close"></i></a>
+      <a class="close-form" href="#searchHeader" data-toggle="collapse"><i class="fa fa-close"></i></a>
       <a href="#0" class="btn-submit"><i class="fa fa-search"></i></a>
     </div>
   </form>
@@ -16,7 +16,7 @@
     </a>
     <ul class="nav__menu clearfix">
       <li class="active">
-        <a href="#searchHeader" data-toggle="collapse"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
+        <a href="#searchHeader" data-toggle="collapse" class="open-search collapsed"><i class="fa fa-search" aria-hidden="true"></i>Search</a>
       </li>
       <li>
         <a href="javascript:void(0);"><i class="fa fa-file-text-o" aria-hidden="true"></i>List your property</a>
