--- a/app/assets/css/pages/_search.scss
+++ b/app/assets/css/pages/_search.scss
@@ -125,12 +125,17 @@
   .link {
     margin-left: 10px;
   }
+
+  .close-modal {
+    top: 0;
+  }
 }
 
-.close-filter {
-  @include absolute(top 10px right 20px);
+.close-modal {
+  @include absolute(top -20px right 0px);
   color: $gray-medium;
-  font-size: 26px;
+  font-size: 32px;
+  z-index: 10;
   &:hover {
     color: #999;
   }
