--- a/app/project.twig
+++ b/app/project.twig
@@ -142,18 +142,76 @@
 	</div>
 </section>
 
-
-<section class="map-detail"></section>
-
-<section class="list-table">
-	<div class="container">
-		<h2 class="section-title">Other Listing in Starhills</h2>
+<section class="map-detail" data-module="MapDetail" data-lat ="10.785" data-lng ="106.701">
+	<div class="map-info">
+		<h3>Resort like Stone-Hill</h3>
+		<p><i class="fa fa-map-marker"></i> <span>District 7</span></p>
+	</div>
+	<div class="map-content" id="map">
 	</div>
 </section>
-<section class="list-similar">
+
+<section class="list-table">
+    <div class="container">
+      <h2 class="section-title">All Listing in Starhills</h2>
+
+      <table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
+        <thead>
+          <tr>
+            <th data-field="code" data-sortable="true">House code</th>
+            <th data-field="numBed" data-sortable="true">Bedroom</th>
+            <th data-field="numBath" data-sortable="true">Bathroom</th>
+            <th data-field="area" data-sortable="true">Area</th>
+            <th data-field="floor" data-sortable="true">Floor</th>
+            <th data-field="furnished" data-sortable="true">Furnished</th>
+            <th data-field="view" data-sortable="true">View</th>
+            <th data-field="price" data-sortable="true">Price</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>AH02163</td>
+            <td>1 bed</td>
+            <td>1 bath</td>
+            <td>80sqm</td>
+            <td>6th</td>
+            <td>furnished</td>
+            <td>River</td>
+            <td>$1000</td>
+            <td><a href="#">View</a></td>
+          </tr>
+          <tr>
+            <td>BH02165</td>
+            <td>1 bed</td>
+            <td>1 bath</td>
+            <td>80sqm</td>
+            <td>6th</td>
+            <td>empty</td>
+            <td>River</td>
+            <td>$2000</td>
+            <td><a href="#">View</a></td>
+          </tr>
+          <tr>
+            <td>H02165</td>
+            <td>1 bed</td>
+            <td>1 bath</td>
+            <td>70sqm</td>
+            <td>6th</td>
+            <td>empty</td>
+            <td>River</td>
+            <td>$3000</td>
+            <td><a href="#">View</a></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
+
+<section class="list-feature">
 	<div class="container">
 
-		<h2 class="section-title">Similar Listings</h2>
+		<h2 class="section-title">Feature Listings in Standhills</h2>
 		<div class="row">
 			<div class="col-md-3 thumb-item">
 				<div class="thumb-gallery">
@@ -247,96 +305,50 @@
 	</div>
 </section>
 
-<section class="list-newly">
+<section class="simmilar-project">
 	<div class="container">
 
-		<h2 class="section-title">Newly-added Listings</h2>
+		<h2 class="section-title">Similar Projects</h2>
 		<div class="row">
-			<div class="col-md-3 thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
-					<span class="love"><i class="fa fa-heart-o"></i></span>
-					<span class="price-tag">$600</span>
-				</div>
-				<div class="thumb-info">
-					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
-					<div class="thumb-service">
-						<span><i class="fa fa-map-marker"></i> District 7</span>
-						<span><i class="fa fa-bed"></i> 1 bed </span>
-						<span><i class="fa fa-bath"></i> 1 bath</span>          
+			<div class="col-md-4">
+				<div class="item-project">
+					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+					<div class="item-project__info">
+						<h3>Mastery An Phu</h3>
+						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+						<div class="btn-wrapper">
+							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
-					<span class="love"><i class="fa fa-heart-o"></i></span>
-					<span class="price-tag">$600</span>
-				</div>
-				<div class="thumb-info">
-					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
-					<div class="thumb-service">
-						<span><i class="fa fa-map-marker"></i> District 7</span>
-						<span><i class="fa fa-bed"></i> 1 bed </span>
-						<span><i class="fa fa-bath"></i> 1 bath</span>          
+			<div class="col-md-4">
+				<div class="item-project">
+					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+					<div class="item-project__info">
+						<h3>Mastery An Phu</h3>
+						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+						<div class="btn-wrapper">
+							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3 thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
-					<span class="love"><i class="fa fa-heart-o"></i></span>
-					<span class="price-tag">$600</span>
-				</div>
-				<div class="thumb-info">
-					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
-					<div class="thumb-service">
-						<span><i class="fa fa-map-marker"></i> District 7</span>
-						<span><i class="fa fa-bed"></i> 1 bed </span>
-						<span><i class="fa fa-bath"></i> 1 bath</span>          
-					</div>
-				</div>
-			</div>
-			<div class="col-md-3 thumb-item">
-				<div class="thumb-gallery">
-					<div class="thumb-slide" data-module="ThumbSlide">
-						<ul class="thumb-img slider-wrapper">
-							<li class="carousel-item active"><img src="assets/images/dummy/vinhomes-central-park.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-							<li class="carousel-item"><img src="assets/images/dummy/lexington-residence.png"></li>
-						</ul>
-					</div>
-					<span class="love"><i class="fa fa-heart-o"></i></span>
-					<span class="price-tag">$600</span>
-				</div>
-				<div class="thumb-info">
-					<h4>house code 456</h4>
-					<a href="#"><h3>Pretty service appartment with bright bedroom</h3></a>
-					<div class="thumb-service">
-						<span><i class="fa fa-map-marker"></i> District 7</span>
-						<span><i class="fa fa-bed"></i> 1 bed </span>
-						<span><i class="fa fa-bath"></i> 1 bath</span>          
+			<div class="col-md-4">
+				<div class="item-project">
+					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+					<div class="item-project__info">
+						<h3>Mastery An Phu</h3>
+						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+						<div class="btn-wrapper">
+							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+							<a class="btn btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+						</div>
 					</div>
 				</div>
 			</div>
