--- a/app/search.twig
+++ b/app/search.twig
@@ -59,7 +59,7 @@
 <section class="search-content " data-module="SearchControl">
 	
 	<div class="filter-wrapper collapse" id="collapseFilter">
-		<a href="#collapseFilter" data-toggle="collapse" class="close-filter"><i class="fa fa-close"></i></a>
+		<a href="#collapseFilter" data-toggle="collapse" class="close-modal"><i class="fa fa-close"></i></a>
 		<div class="container">
 			<h3 class="block-title">Required Amenities</h3>
 			<div class="row">
